2008-07-28  Andreas Schwab  <schwab@suse.de>

	* lisp.h (init_weak_hash_tables, syms_of_font)
	(xd_read_queued_messages, syms_of_dbusbind): Declare.
	(remove_hash_entry): Don't declare.
	* eval.c (maybe_call_debugger): Make static and move before use.
	* gtkutil.c: Include <X11/Xft/Xft.h> if HAVE_XFT.
	* xdisp.c: Include "gtkutil.h" if USE_GTK.
	* xterm.h (x_set_frame_alpha): Declare.

2008-07-28  Jan Djärv  <jan.h.d@swipnet.se>

	* gtkutil.c (menu_nav_ended): Revert change from 2008-07-24.
	(create_menus): Connect selection-done to menu_nav_ended.

2008-07-27  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* nsfns.m (x-create-frame): Add copy of parms argument to beginning.
	Set Vx_resource_name to a fallback.  Replace read of 'buffered'
	parameter with read of 'alpha' one.
	(Qns_frame_parameter): Remove.
	* nsselection.m (selection-coding-system)
	(next-selection-coding-system, Vselection_coding_system)
	(Vnext_selection_coding_system): Drop.

2008-07-27  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* nsfns.m (do-applescript, do_applescript): Rename to
	ns-do-applescript, ns_do_applescript, and move within file.

2008-07-27  Dan Nicolaescu  <dann@ics.uci.edu>

	Remove support for Mac Carbon.
	* mactoolbox.c:
	* macterm.h:
	* macterm.c:
	* macselect.c:
	* macmenu.c:
	* macgui.h:
	* macfns.c:
	* mac.c: Remove file.
	* s/darwin.h:
	* m/intel386.h:
	* xfaces.c:
	* xdisp.c:
	* window.c:
	* tparam.c:
	* termhooks.h:
	* termcap.c:
	* term.c:
	* syssignal.h:
	* sysselect.h:
	* sysdep.c:
	* process.c:
	* lread.c:
	* lisp.h:
	* keyboard.c:
	* image.c:
	* fringe.c:
	* frame.h:
	* frame.c:
	* fontset.c:
	* font.h:
	* font.c:
	* fns.c:
	* fileio.c:
	* emacs.c:
	* dispnew.c:
	* dispextern.h:
	* config.in:
	* atimer.c:
	* Makefile.in: Remove code for Carbon

2008-07-26 YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* macterm.c (XDrawLine) [USE_MAC_IMAGE_IO]: Remove spurious return.

2008-07-26  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>
