@@ -1,3 +1,12 @@
+2008-07-28  Jason Rumney  <jasonr@gnu.org>
+
+        * w32term.c: (w32_enable_unicode_output, cleartype_active): Remove
+        obsolete display options.
+        (x_draw_glyph_string_background): Don't use old cleartype_active
+        workaround.
+        (w32_initialize): Remove cleartype_active initialization.
+        (syms_of_w32term): Remove w32_enable_unicode_output initialization.
+
 2008-07-28  Andreas Schwab  <schwab@suse.de>
 
 	* lisp.h (init_weak_hash_tables, syms_of_font)
